--- a/src/components/ListOfFilmsComponent/FilmStyle.css
+++ b/src/components/ListOfFilmsComponent/FilmStyle.css
@@ -17,7 +17,8 @@
   
   .films-list {
     display: flex;
-    gap: 10px;
+    gap: 5px;
+    margin-left: 60px;
   }
   
   .film-card {
@@ -77,7 +78,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     border: none;
-    padding: 10px;
+    padding: 15px;
     cursor: pointer;
     position: absolute;
     top: 50%;
