--- a/src/components/Footer/FooterStyle.css
+++ b/src/components/Footer/FooterStyle.css
@@ -23,10 +23,45 @@
   }
   
   .footer-main li:hover {
-    color: #e50914; /* Ngjyra e kuqe që përdor Netflix */
+    color: #e50914; 
     cursor: pointer;
   }
+  .footer-main a {
+    text-decoration: none;
+    color: #b3b3b3; 
+    transition: color 0.3s ease;
+  }
   
+  .footer-main a:hover {
+    color: #e50914;
+  }
+  
+  .footer-main a:active {
+    color: #f40612;
+  }
+  
+  .footer-main li {
+    font-size: 16px;
+    color: #b3b3b3;
+    margin-bottom: 10px;
+    list-style: none;
+  }
+  
+  .footer-main li:hover {
+    color: #e50914;
+  }
+  
+  .social-icons i {
+    font-size: 24px;
+    color: white;
+    margin-right: 15px;
+    transition: color 0.3s ease;
+  }
+  
+  .social-icons i:hover {
+    color: #e50914;
+    cursor: pointer;
+  }
   .explore, .company {
     display: flex;
     flex-direction: column;
@@ -82,10 +117,9 @@
     background-color: #f40612;
   }
   
-  /* Stilizimi për seksionin e copyright-it */
   .copyright-section {
     width: 100%;
-    background-color: #e50914; /* Sfonda e kuqe për copyright */
+    background-color: #e50914; 
     text-align: center;
     padding: 15px;
     margin-top: 30px;
