--- a/src/components/Footer/FooterStyle.css
+++ b/src/components/Footer/FooterStyle.css
@@ -1,133 +1,157 @@
 .footer-main {
-    background-color: #242020;
-    padding: 50px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  background-color: #242020;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer-main h2 {
+  color: white;
+  margin-bottom: 20px;
+}
+
+.footer-main ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-main li {
+  font-size: 16px;
+  color: #b3b3b3;
+  margin-bottom: 10px;
+}
+
+.footer-main li:hover {
+  color: #e50914;
+  cursor: pointer;
+}
+
+.footer-main a {
+  text-decoration: none;
+  color: #b3b3b3;
+  transition: color 0.3s ease;
+}
+
+.footer-main a:hover {
+  color: #e50914;
+}
+
+.footer-main a:active {
+  color: #f40612;
+}
+
+.social-icons i {
+  font-size: 24px;
+  color: white;
+  margin-right: 15px;
+  transition: color 0.3s ease;
+}
+
+.social-icons i:hover {
+  color: #e50914;
+  cursor: pointer;
+}
+
+.explore, .company {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+}
+
+.ul-list {
+  padding-right: 50px;
+}
+
+.social-media {
+  width: 20%;
+}
+
+.newsletter {
+  width: 30%;
+  color: white;
+}
+
+.newsletter p {
+  margin-bottom: 10px;
+}
+
+.newsletter input {
+  width: 70%;
+  padding: 10px;
+  margin-right: 10px;
+  border-radius: 5px;
+  border: none;
+}
+
+.newsletter button {
+  padding: 10px 20px;
+  background-color: #e50914;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.newsletter button:hover {
+  background-color: #f40612;
+}
+
+.copyright-section {
+  width: 100%;
+  background-color: #e50914;
+  text-align: center;
+  padding: 15px;
+  margin-top: 30px;
+}
+
+.copyright-section p {
+  color: white;
+  font-size: 16px;
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .footer-main {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
   }
-  
-  .footer-main h2 {
-    color: white;
+
+  .explore, .company, .social-media, .newsletter {
+    width: 100%;
+    text-align: center;
     margin-bottom: 20px;
   }
-  
-  .footer-main ul {
-    list-style: none;
+
+  .ul-list {
     padding: 0;
   }
-  
-  .footer-main li {
-    font-size: 16px;
-    color: #b3b3b3;
-    margin-bottom: 10px;
-  }
-  
-  .footer-main li:hover {
-    color: #e50914; 
-    cursor: pointer;
-  }
-  .footer-main a {
-    text-decoration: none;
-    color: #b3b3b3; 
-    transition: color 0.3s ease;
-  }
-  
-  .footer-main a:hover {
-    color: #e50914;
-  }
-  
-  .footer-main a:active {
-    color: #f40612;
-  }
-  
-  .footer-main li {
-    font-size: 16px;
-    color: #b3b3b3;
-    margin-bottom: 10px;
-    list-style: none;
-  }
-  
-  .footer-main li:hover {
-    color: #e50914;
-  }
-  
-  .social-icons i {
-    font-size: 24px;
-    color: white;
-    margin-right: 15px;
-    transition: color 0.3s ease;
-  }
-  
-  .social-icons i:hover {
-    color: #e50914;
-    cursor: pointer;
-  }
-  .explore, .company {
-    display: flex;
-    flex-direction: column;
-    width: 25%;
-  }
-  
-  .ul-list {
-    padding-right: 50px;
-  }
-  
-  .social-media {
-    width: 20%;
-  }
-  
-  .social-icons i {
-    font-size: 24px;
-    color: white;
-    margin-right: 15px;
-  }
-  
-  .social-icons i:hover {
-    color: #e50914;
-    cursor: pointer;
-  }
-  
-  .newsletter {
-    width: 30%;
-    color: white;
-  }
-  
-  .newsletter p {
-    margin-bottom: 10px;
-  }
-  
+
   .newsletter input {
-    width: 70%;
-    padding: 10px;
-    margin-right: 10px;
-    border-radius: 5px;
-    border: none;
-  }
-  
-  .newsletter button {
-    padding: 10px 20px;
-    background-color: #e50914;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .newsletter button:hover {
-    background-color: #f40612;
-  }
-  
-  .copyright-section {
     width: 100%;
-    background-color: #e50914; 
-    text-align: center;
-    padding: 15px;
-    margin-top: 30px;
+    margin-bottom: 10px;
   }
-  
-  .copyright-section p {
-    color: white;
-    font-size: 16px;
-    margin: 0;
+
+  .newsletter button {
+    width: 100%;
   }
-  
+}
+
+@media (max-width: 1024px) {
+  .footer-main {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .explore, .company, .social-media, .newsletter {
+    width: 45%;
+    margin-bottom: 20px;
+  }
+
+  .social-icons i {
+    font-size: 20px;
+    margin-right: 10px;
+  }
+}
