--- a/src/components/HeaderComponent/HeaderPageStyle.css
+++ b/src/components/HeaderComponent/HeaderPageStyle.css
@@ -40,9 +40,21 @@ body, html {
   cursor: pointer;
   color: white;
 }
-
+.nav-links ul li{
+  list-style: none;
+}
+.nav-links ul li a {
+  text-decoration: none; 
+  color: white;
+}
+.nav-links ul li a:hover {
+  color: #e50914;
+}
 .nav-links li:hover {
   color: #e50914;
+}
+.links{
+  color: white;
 }
 
 .search-icon {
